--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost/test
-spring.datasource.username=test
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto= create-drop
+#spring.datasource.url=jdbc:mysql://localhost/test
+#spring.datasource.username=test
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto= create-drop
+server.port=0
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+# Datasource
+spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.username=local
+spring.datasource.password=local
+spring.datasource.driver-class-name=org.h2.Driver
